tests/frontend_tests/error_end_binop.c
int main() {
  // error: expected ';' after '5'
  return 3 + 5
